Sub header - fix alignment of search bar

--- a/root/static/styles.css
+++ b/root/static/styles.css
@@ -394,6 +394,10 @@ span.tag {
     text-align: center;
 }
 
+.sub-header .search-form {
+    justify-content: flex-end;
+}
+
 .empty-list {
     display: flex;
     justify-content: center;
